5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1680_1949.log
== TEST (2019-05-01 15:07:13) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
	
#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

elif(n1nj == n2ns and n2nj == n1ns):
	print("Ganhou R$ 50.000,00")
-- ERROR:
File "XXXX", line 14
    elif(n1nj == n2ns and n2nj == n1ns):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:05) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
	
#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

elif((n1nj == n2ns) and (n2nj == n1ns)):
	print("Ganhou R$ 50.000,00")
-- ERROR:
File "XXXX", line 14
    elif((n1nj == n2ns) and (n2nj == n1ns)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:16:43) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:22:16) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("ljhjj")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:22:35) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("ljhjj")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:23:46) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:24:09) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:24:23) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:24:32) 
-- CODE:
numeroJogador = int(input("Numero apostado pelo jogador (com dois digitos):"))
numeroSorteado = int(input("Numero sorteado na loteria (tambem com dois digitos):"))

#isolamento dos digitos do numero do jogador
n1nj = (numeroJogador // 10 )
n2nj = (numeroJogador % 10)
#isolamento dos digitos do nunero sorteado
n1ns = (numeroSorteado // 10)
n2ns = (numeroSorteado % 10)

if(numeroJogador == numeroSorteado ):
	print("Ganhou R$ 100.000,00")
elif(n1nj == n2ns and n2nj == n1ns  ):
	print("Ganhou R$ 50.000,00")
elif(n1nj == n2ns or n2nj == n1ns or n1nj == n1ns or n2nj == n2ns ):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.19764
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
